# qrmrepo

./: Dockerfile  Readme.md  docker-compose.yml
.github/workflows/: aws.yml  kubernetes.yml
backend/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
backend/cmd/: root.go
backend/cmd/serve/: root.go
backend/config/: config.go
backend/server/: routes.go  server.go
backend/server/handlers/: infura.go
deployments/: db-deployment.yaml  db-service.yaml  dbprep-deployment.yaml  dbprep-service.yaml  frontend-deployment.yaml  relay-deployment.yaml
deployments/backend/: backend-deployment.yaml  backend-service.yaml  dbprep-deployment.yaml  relay-deployment.yaml  relay-service.yaml
deployments/db/: create-persistent-volume-claim.yaml  db-deployment.yaml  db-service.yaml  storageclass.yaml
deployments/frontend/: frontend-deployment.yaml  frontend-service.yaml
deployments/networking/: calico.yaml
doc/: README.md
doc/puml/: login.puml  register.puml  transaction.puml
enclave/: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  project.edl
enclave/api/: go.mod  go.sum  main.go  user.go
enclave/api/webauthn/: README.md
enclave/api/webauthn/protocol/: challenge.go
enclave/api/webauthn/protocol/webauthncose/: webauthncose.go
enclave/api/webauthn/webauthn/: login.go  registration.go  user.go
enclave/enclave/: CMakeLists.txt  enclave.cpp  project.conf
enclave/graph/: enclave_backend.puml
enclave/host/: CMakeLists.txt  host.cpp  host.h
enclavedummy/: .gitignore  Dockerfile  go.mod  go.sum  main.go  user.go
frontend/: DOCKERFILE  Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  nginx.conf.template  package-lock.json  package.json  proxy.js  tailwind.config.js
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/dashboard/: dashboard.module.ts  dashboard.routes.ts
frontend/src/assets/: 401.html  404.html  checkout.html  detail_category.html  detail_product.html  detail_sku.html  env.js  env.sample.js  index.html  order-confirmation.html  paypal-checkout.html
frontend/src/environments/: environment.prod.ts  environment.ts
old dev ops/: aws.yml  docker-compose.yml
relay/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
relay/cmd/: root.go
relay/cmd/serve/: root.go
relay/cmd/setup/: root.go
relay/config/: config.go
relay/models/: lookup.go
relay/persistence/: lookup.go  postgres.go  schema.go
relay/server/: creator.go  mapper.go  routes.go  server.go  session.go
relay/server/handlers/: proxy.go
vpn/: client.conf  server.conf
(+60 files in other folders)
